# openlinker-hermes-plugin

./: CHANGELOG.md  INSTALL.md  INSTALL.zh-CN.md  README.md  README.zh-CN.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
hermes_openlinker/: __init__.py  adapter.py  cli.py  config.py  worker.py
tests/: test_adapter.py  test_config.py  test_plugin.py  test_worker.py
